<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY app_name    "AELF">
    <!ENTITY app_version "2.8.6">
    <!ENTITY app_support "support@epitre.co">
]>
<resources>

    <string name="app_name">&app_name;</string>
    <string name="app_version">&app_version;</string>
    <string name="app_support">&app_support;</string>

    <!-- Version ID to use when querying the API. Only increment when the data format changes to avoid excessive API load -->
    <item name="api_version" type="integer">76</item>

    <!-- Drawer actions -->
    <string name="drawer_open">Ouvrir la liste des offices</string>
    <string name="drawer_close">Fermer la liste des offices</string>

    <!-- Drawer items -->
    <string name="nav_mass">Messe</string>
    <string name="nav_informations">Informations</string>
    <string name="nav_bible">Bible</string>
    <string name="nav_title_offices">Liturgies des heures</string>
    <string name="nav_lectures">Lectures</string>
    <string name="nav_laudes">Laudes</string>
    <string name="nav_tierce">Tierce</string>
    <string name="nav_sexte">Sexte</string>
    <string name="nav_none">None</string>
    <string name="nav_vepres">Vêpres</string>
    <string name="nav_complies">Complies</string>

    <!-- Toolbar buttons -->
    <string name="action_calendar">Date</string>
    <string name="action_share">Partager</string>
    <string name="action_sync_settings">Paramètres</string>
    <string name="action_sync_do">Synchroniser</string>
    <string name="action_refresh">Rafraîchir</string>
    <string name="action_about">À propos</string>
    
    <!-- Dialogs -->
    <string name="dialog_about_title">À propos</string>
    <string name="dialog_about_content">
        L\'application \"&app_name;\" version &app_version; est développée bénévolement par
        "Epitre &amp; co" avec le soutien d\'AELF (www.aelf.org), l\'Association Épiscopale pour la
        Liturgie Francophone.

        \n\nTextes liturgiques, logo et nom reproduits avec l\'aimable autorisation d\'AELF. Tous droits
        réservés. AELF n\'est pas responsable de cette application.

        \n\nPour plus d\'informations sur cette application, contactez &app_support;.
    </string>

    <string name="dialog_whats_new_title">Nouveautés</string>
    <string name="dialog_whats_new_content">
        Merci d\'avoir mis à jour votre application \"&app_name;\" !
        \n
        \nEn apparence petite et discrète, cette mise à jour vient avec un tout nouveau moteur de
        \nsynchronisation. Concrètement, cela corrige à la racine les soucis de synchronisation
        \nremontés ces dernières années. (si vous avez toujours un problème hors connexion,
        \ncontactez-nous depuis les préférences de l\'application)
        \n
        \nEn plus de cela:
        \n• Revenir en arrière depuis la Bible vers un office arrive maintenant au bon endroit.
        \n• La doxologie et les antiennes sont maintenant là où on les attend.
        \n• Un rare crash au chargement des offices a été corrigé.
        \n• La Bible a été synchronisée avec le site officiel.
        \n
        \nMerci pour vos retours, commentaires et suggestions qui permettent à cette application de
        \ndevenir meilleure !
    </string>

	<!-- Buttons -->
    <string name="button_ok">Valider</string>
    <string name="button_close">Fermer</string>
    <string name="button_cancel">Annuler</string>
    <string name="button_today">Auj.</string>

    <!-- Preferences -->
    <string name="mailto_dev">Envoyer un e-mail au développeur</string>

    <!-- Search engine -->
    <string name="bible_search_hint">Rechercher un passage de la Bible</string>
    <string name="bible_search_title">Rechercher</string>

    <!-- Shortcuts -->
    <string name="shortcut_mass_label">Messe du jour</string>
    <string name="shortcut_office_label">Liturgie des heures</string>
    <string name="shortcut_bible_label">Lire la Bible</string>
    <string name="shortcut_search_label">Rechercher dans la Bible</string>

</resources>
