<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LecturesActivity">

	<item
        android:id="@+id/action_calendar"
        android:orderInCategory="120"
        app:showAsAction="always"
        android:title="@string/action_calendar"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="130"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sync_settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_sync_settings"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_refresh"/>

    <item
        android:id="@+id/action_sync_do"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_sync_do"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="210"
        app:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
