<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LecturesActivity">

    <item
        android:id="@+id/action_toggle_night_mode"
        android:checkable="true"
        android:orderInCategory="200"
        android:title="@string/action_toggle_night_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync_settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_sync_settings"/>

    <item
        android:id="@+id/action_sync_do"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_sync_do"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="210"
        app:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
